# ormStatementWorker

./: CMakeLists.txt
orm/: buildStatement.cpp  buildStatement.h  databaseClient.cpp  databaseClient.h
statement/: post.cpp  post.h  put.cpp  put.h  query.h  statement.h
